--- a/src/app/User/activity/activity.component.html
+++ b/src/app/User/activity/activity.component.html
@@ -1,29 +1,37 @@
 <div>
-    <h4 class="Black">Activity</h4>
+    <h4 class="Color">Activity</h4>
 
 
-    <div class="col-md-12">
+    <div class="col-md-12  ani-from-bottom">
 
-        <table class="table">
-            <tr>
-                <td>
-                    <span class="ResultSpan">42</span>
-                    <span class="HeadingSpan" style="display: block;">Requested</span>
-                </td>
-                <td> <span class="ResultSpan">42</span>
-                    <span class="HeadingSpan" style="display: block;">Scheduled</span>
+        <div class="row container" style="margin-bottom: 30px;">
 
-                </td>
-                <td>
-                    <span class="ResultSpan">42</span>
-                    <span class="HeadingSpan" style="display: block;">Declined</span>
-                </td>
-                <td>
-                    <span class="ResultSpan">42</span>
-                    <span class="HeadingSpan" style="display: block;">Completed</span>
-                </td>
-            </tr>
-        </table>
+            <div class="col-md-3">
+                <div class="boxshadowcard2">
+                    <span class="ResultSpan">24</span>
+                    <span class="F12 LightBlack" style="display: block;">Attended Web.</span>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="boxshadowcard2">
+                    <span class="ResultSpan">3</span>
+                    <span class="F12 LightBlack" style="display: block;">Scheduled Web.</span>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="boxshadowcard2">
+                    <span class="ResultSpan">12</span>
+                    <span class="F12 LightBlack" style="display: block;">Pending Request</span>
+                </div>
+            </div>
+            <!-- <div class="col-md-3">
+              <div class="boxshadowcard2">
+                <span class="ResultSpan">1300</span>
+                <span class="F12 LightBlack" style="display: block;">Pending</span>
+              </div>
+            </div> -->
+
+        </div>
 
 
     </div>
