--- a/src/app/User/follow/follow.component.html
+++ b/src/app/User/follow/follow.component.html
@@ -27,7 +27,7 @@
 
                 <div class="p-2 flex-fill" style="text-align:center">
                     <button class="NavButtons" [ngClass]="value === 'Followers' ? 'Active' : ''" (click)="value = 'Followers'">
-              Tutors
+              Organisers
             </button>
                 </div>
             </div>
