--- a/src/app/User/wall-suggestion/wall-suggestion.component.html
+++ b/src/app/User/wall-suggestion/wall-suggestion.component.html
@@ -1,10 +1,5 @@
 <div class="card app-wall-suggestion card-noborder">
-    <div id="feedback">
-        <div>
-            <span class="headings-small">Feedback</span></div>
-        <app-feedback-a></app-feedback-a>
-    </div>
-    <div id="userfavtopic" style="margin-top: 25px;">
+    <div id="userfavtopic">
         <div>
             <span class="headings-small">Topics</span>
             <div style="display: block;" style="margin-top: 10px;">
@@ -12,4 +7,11 @@
             </div>
         </div>
     </div>
+
+    <div id="feedback"  style="margin-top: 25px;">
+        <div>
+            <span class="headings-small">Feedback</span></div>
+        <app-feedback-a></app-feedback-a>
+    </div>
+   
 </div>
