--- a/src/app/Common/institution-card-b/institution-card-b.component.html
+++ b/src/app/Common/institution-card-b/institution-card-b.component.html
@@ -1,5 +1,5 @@
 <div class="" style="margin-bottom:5px">
-    <input type="text" placeholder="Search Followers" class="form-control" [(ngModel)]="SearchFollowers">
+    <input type="text" placeholder="Search Topics" class="form-control" [(ngModel)]="SearchFollowers">
 </div>
 <div class="">
     <div class="col-md-12" *ngFor="let PremInstList of Institution | search:'InstitutionName':SearchFollowers" style="margin-bottom:5px">
