--- a/src/app/Common/online-class-a/online-class-a.component.html
+++ b/src/app/Common/online-class-a/online-class-a.component.html
@@ -1,5 +1,5 @@
 <div class="card-online-class-a boxshadowcard" (click)="GoToTestPaper(QuesPapLink.QuestionPaperId)">
-    <app-postheader [Name]="'Institution Name'" [Image]="'img'" [time]="'time'"></app-postheader>
+    <!-- <app-postheader [Name]="'Institution Name'" [Image]="'img'" [time]="'time'"></app-postheader> -->
     <div style="padding: 15px;">
         <div class="d-flex" style="border-bottom: 1px solid #f1f1f1 ">
             <div class="flex-grow-1">
@@ -11,36 +11,52 @@
         line-height: 1.75;">
                     <span class="onlineTopicDescription">
 
-            <ul style=" list-style-type: none;
+                        <ul style=" list-style-type: none;
             margin: 0;
             padding: 0;">
-              <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session</li>
-              <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
-              <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples</li>
-              <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
-            </ul>
-          </span>
+                            <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session</li>
+                            <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
+                            <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples
+                            </li>
+                            <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
+                        </ul>
+                    </span>
                 </div>
             </div>
         </div>
         <div style="margin-top: 15px;">
-            <div class="d-flex">
-
-                <div class="p-2">
-                    <img src="../../../assets/Image/elonmusk1.jpg" style="width: 72px;height:72px;border-radius: 10px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="d-flex">
+                        <div class="p-2">
+                            <img src="../../../assets/Image/elonmusk1.jpg"
+                                style="width: 72px;height:72px;border-radius: 10px;">
+                        </div>
+                        <div class="p-2 flex-grow-1">
+                            <span class="onlineSubHeading" style="display: block;">Organiser</span>
+                            <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
+                            <div style="display: block;">
+                                <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="p-2 flex-grow-1">
-                    <span class="onlineSubHeading" style="display: block;">Tutor</span>
-                    <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
-                    <div style="display: block;">
-                        <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
-
+                <div class="col-md-6">
+                    <div class="d-flex">
+                        <div class="p-2">
+                            <img src="../../../assets/Image/elonmusk1.jpg"
+                                style="width: 72px;height:72px;border-radius: 10px;">
+                        </div>
+                        <div class="p-2 flex-grow-1">
+                            <span class="onlineSubHeading" style="display: block;">Organiser</span>
+                            <span class="tutorname" style="display: block;">S.Bala Krishnan</span>
+                            <div style="display: block;">
+                                <span class="tutordescription">13 Yrs , M.A, B.Ed </span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
-
-
         </div>
 
         <div class="row" style="margin-top: 15px;">
