--- a/src/app/Common/online-class-c/online-class-c.component.css
+++ b/src/app/Common/online-class-c/online-class-c.component.css
@@ -8,9 +8,31 @@ tr.tabletd td {
 .boldtd {
     font-weight: 600;
 }
-
+.statusspan{
+    text-align: center;
+        font-size: 12px;
+        color: white;
+        float: right;
+        padding: 2px 5px;
+}
 .onlineTopicHeading {
     color: #3D3D3D;
+    font-weight: 500;
+    font-size: 18px;
+}
+.boxshadowcard2{
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15px;
+    padding: 15px 10px;
+}
+
+.boxshadowcard2:hover{
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 15px;
+   
+}
+.onlineTopicHeading:hover {
+    color: #2A8CB7 !important;
     font-weight: 500;
     font-size: 18px;
 }
