--- a/src/app/Common/online-class-details-b/online-class-details-b.component.html
+++ b/src/app/Common/online-class-details-b/online-class-details-b.component.html
@@ -53,27 +53,30 @@
                         <span class="onlineSubHeading" style="display: block;">Course Detail</span>
                         <span class="onlineTopicDescription">
 
-            <ul style=" list-style-type: none;
+                            <ul style=" list-style-type: none;
             margin: 0;
             padding: 0;">
-              <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session</li>
-              <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
-              <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples</li>
-              <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
-            </ul>
-          </span>
+                                <li style="font-size: 13px;">Understand Kirchhoff's Current Law in this Live session
+                                </li>
+                                <li style="font-size: 13px;">Learn to apply KCL and KVL in an Electrical Circuit</li>
+                                <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple
+                                    examples</li>
+                                <li style="font-size: 13px;">Clear your doubts with Subject Expert Hemant Sir</li>
+                            </ul>
+                        </span>
                     </div>
 
                     <div style="margin-top: 15px;line-height: 2.25;">
                         <span class="onlineSubHeading" style="display: block;">Tutor Detail</span>
                         <span style="display: block;">S.Bala Krishnan <span class="QuesLinkDescription">13 Yrs , </span>
-                        <span class="QuesLinkDescription">M.A, B.Ed</span>
+                            <span class="QuesLinkDescription">M.A, B.Ed</span>
                         </span>
 
                         <ul style=" list-style-type: none;margin: 0;padding: 0;line-height: 2.25;">
                             <li style="font-size: 13px;">13 years of Experience in NEET, JEE Maths</li>
                             <li style="font-size: 13px;">Taught and Mentored more 100+ students</li>
-                            <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples</li>
+                            <li style="font-size: 13px;">Understand Kirchhoff's Voltage Law with some simple examples
+                            </li>
                             <li style="font-size: 13px;">Guided 100s of students to score 100% in Mathematics</li>
                         </ul>
                     </div>
@@ -86,21 +89,9 @@
             <div style="padding:15px">
                 <div id="feedback">
                     <div>
-                        <span class="headings-small">Feedback</span></div>
-                    <div class="d-flex mb-3" *ngFor="let st of studentinvitationlist">
-                        <div class="flex-grow-1">
-                            <div class="TotalHeading">
-                                <span class="topic-head-small-2"> {{st.name}}</span>
-                                <span class="topic-desc-small-1" style="display:block">1Date / Time</span>
-                            </div>
-                        </div>
-                        <div class="">
-                            <div style="padding:5px 0px">
-                                <img src="../../../assets/Icons/accept.png" style="height: 18px;width: 18px;" />
-                                <img src="../../../assets/Icons/close.png" style="height: 18px;width: 18px;margin-left: 10px;" />
-                            </div>
-                        </div>
+                        <span class="headings-small">Particpant Request</span>
                     </div>
+                    <app-participant-request-a></app-participant-request-a>
                 </div>
 
             </div>
