--- a/src/app/Institution/Page/ins-wall/ins-wall.component.html
+++ b/src/app/Institution/Page/ins-wall/ins-wall.component.html
@@ -1,4 +1,4 @@
-<div style="margin-top:20px;">
+<div class="ani-from-bottom" style="margin-top:20px;">
     <!-- <app-banner></app-banner> -->
     <div class="row">
         <!-- <div class="col-md-3">
