--- a/src/app/Institution/ins-wall-profile-side/ins-wall-profile-side.component.html
+++ b/src/app/Institution/ins-wall-profile-side/ins-wall-profile-side.component.html
@@ -1,22 +1,33 @@
-<div class="card card-noborder" style="margin-top: 90px;">
-    <div class="d-flex" style="background-color: beige;">
+<div class="card card-noborder ani-fadein" style="margin-top: 90px;padding: 5px;margin-bottom: 20px;">
+    <div class="d-flex" style="background-color: #f7f7f7;">
 
 
         <div style="margin: 20px 10px">
             <img src="assets/Image/employee1.jpg" class="rounded-circle" alt="Cinque Terre" width="90" height="90">
         </div>
         <div>
-            <div class="d-flex flex-column" style="top: 15%;position: absolute;">
-                <div class="p-1">@Username</div>
-                <div class="p-1">@email | @phone</div>
+            <div class="d-flex flex-column" style="top: 5%;position: absolute;">
+                <div class="p-2">@Username</div>
+                <div class="p-2">@edpickerid</div>
+                <div class="p-2">@email | @phone</div>
             </div>
         </div>
         <div class="p-2 ml-auto">
-            <div style="top: 11%;position: relative;">
+            <div style="top: 0%;position: relative;">
                 <div class="d-flex flex-column">
 
-                    <div class="" style="text-align: center;margin-bottom: 5px;"><span class="F16" style="text-align: center;">32000</span></div>
-                    <div class=""><input type="button" class="btn regisbutn-small" value="follow" /></div>
+                    <div class="" style="text-align: center;margin-top: 10px;"><span class="F12"
+                            style="text-align: center;">32000 followers</span>
+                        </div>
+                    <div style="margin-top: 10px;" class=""><button type="button" class="btn regisbutn-small">Follow
+                        <i style="margin-left: 10px;" class="far fa-bell"></i>
+                        </button>
+                    </div>
+                    <div class="" style="margin-top: 10px;">
+                        <i style="margin-left: 10px;" class="fab fa-instagram"></i>
+                        <i style="margin-left: 10px;" class="fab fa-facebook-f"></i>
+                        <i style="margin-left: 10px;" class="fab fa-youtube"></i>
+                        </div>
                 </div>
             </div>
         </div>
