--- a/src/app/User/notification/notification.component.html
+++ b/src/app/User/notification/notification.component.html
@@ -1,34 +1,33 @@
 <div>
     <h4 class="Color">Notifications</h4>
-    <div class="d-flex">
-        <div class="p-2 flex-fill" style="text-align:center">
+   <!-- <div class="d-flex">
+         <div class="p-2 flex-fill" style="text-align:center">
             <button class="NavButtons" [ngClass]="value === 'Request' ? 'Active' : ''" (click)="value = 'Request'">
         Request
       </button>
-        </div>
+        </div> 
         <div class="p-2  flex-fill" style="text-align:center">
             <button class="NavButtons" [ngClass]="value === 'Notifications' ? 'Active' : ''" (click)="value = 'Notifications'">
         Notifications
       </button>
-        </div>
-        <!-- <div class="p-2 flex-fill" style="text-align:center">
+        </div> 
+        <div class="p-2 flex-fill" style="text-align:center">
       <button
         class="NavButtons"
         [ngClass]="value === 'Logs' ? 'Active' : ''"
         (click)="value = 'Logs'"
       >
         Logs
-      </button> -->
-        <!-- </div> -->
-    </div>
+      </button> 
+         </div> 
+    </div>-->
 
     <!-- Tab panes -->
-    <div [ngSwitch]="value">
+    <!-- <div [ngSwitch]="value">
         <div *ngSwitchCase="'Notifications'">
             <app-notificatio-card-a [UserNotificationList]="UserNotificationList"></app-notificatio-card-a>
         </div>
-        <div *ngSwitchCase="'Request'">
-            <app-friend-request-card [FriendRequestData]="FriendRequestList"></app-friend-request-card>
-        </div>
-    </div>
+        
+    </div> -->
+    <app-notificatio-card-a [UserNotificationList]="UserNotificationList"></app-notificatio-card-a>
 </div>
