--- a/src/app/User/wall-profile-count/wall-profile-count.component.html
+++ b/src/app/User/wall-profile-count/wall-profile-count.component.html
@@ -1,15 +1,10 @@
 <div class="card card-noborder" style="margin:10px 0px;padding:5px">
-    <div class="topic-head-small-2">
-        <span class="TotalHeading">Post</span><span class="TotalResult">totalpost</span>
-    </div>
+    <div class="">
+       <span class="F12"> 10 Topics Following</span>
+        </div>
 
-    <div class="topic-head-small-2">
-        <span class="TotalHeading">Followers</span><span class="TotalResult">totalfollowers</span>
+    <div class="">
+        <span class="F12"> 14 Organiser Following</span>
     </div>
-    <div class="topic-head-small-2">
-        <span class="TotalHeading">Following</span><span class="TotalResult">totalfollowing</span>
-    </div>
-    <div class="topic-head-small-2">
-        <span class="TotalHeading">QA</span><span class="TotalResult">totalqa</span>
-    </div>
+  
 </div>
