--- a/src/app/User/wall-profile/wall-profile.component.html
+++ b/src/app/User/wall-profile/wall-profile.component.html
@@ -1,19 +1,20 @@
 <div class="card card-noborder">
-    <div style="text-align:center;margin-top: 20px;">
-        <img src="assets/Image/employee1.jpg" class="rounded-circle" alt="Cinque Terre" width="90" height="90">
-    </div>
-    <div class="" style="padding:3px 5px 0px 5px;margin-top: 10px;">
-        <div style="text-align:center">
-            <h4 style="color:#3d3d3d">{{UserWallData.username}}<img *ngIf="dataEditable" (click)="MakeEditable('username')" src="assets/Image/Icons/editable.png" height="10px" width="10px;"></h4>
-            <div>
-            </div>
+  <div style="text-align:center;margin-top: 20px;">
+    <img src="assets/Image/employee1.jpg" class="rounded-circle" alt="Cinque Terre" width="90" height="90">
+  </div>
+  <div class="" style="padding:3px 5px 0px 5px;margin-top: 10px;">
+    <div>
+      <span style="margin-bottom: 5px;" class="F16">Krishnan RA</span>
+      <span class="F12 PrimaryColor2" style="display: block;margin-bottom: 15px;">@userid</span>
+      <span class="F12" style="color: #5c5c5c;display: block;margin-bottom: 5px;"><i style="margin-right: 5px;"
+          class="fas fa-mobile-alt"></i> @Phone Number</span>
+      <span style="margin-bottom: 5px;" class="F12" style="color: #5c5c5c;display: block;margin-bottom: 5px;"><i
+          style="margin-right: 5px;" class="fas fa-envelope"></i> @EMail</span>
+      <span style="margin-bottom: 5px;" class="F12" style="color: #5c5c5c;display: block;margin-bottom: 5px;"><i
+          style="margin-right: 5px;" class="fas fa-briefcase"></i>@Professional</span>
 
-            <span style="font-size:16px;color: #5c5c5c;display: block;">@Phone Number</span>
-            <span style="font-size:16px;color: #5c5c5c;display: block;">@EMail</span>
-            <span style="font-size:16px;color: #5c5c5c;display: block;">@Professional</span>
-
-        </div>
     </div>
+  </div>
 </div>
 
 <!-- <div class="card card-noborder" style="padding:10px;margin-top: 10px;">
