--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,32 +2,32 @@
   color: white;box-shadow: 0px 0px 10px 12px rgb(251, 251, 251);height: 70px;background-color: white;">
     <div class="container-fluid">
 
-        <a style="font-family: 'Pacifico', cursive;color:#247ba0;font-size: xx-large;text-decoration:none" href="/User/Wall">Socedu</a>
-        <input type="text" class="form-control" placeholder="Search.." style="margin-left:15px; width: 40%;border-radius: 0.01rem;border:none;border-bottom: 1px solid #247ba0;" />
+        <a style="font-family: 'Pacifico', cursive;color:#247ba0;font-size: xx-large;text-decoration:none" (click)="routenav('Wall')">Socedu</a>
+        <input type="text" class="form-control" placeholder="Search.." (click)="GoToPage('Search')" style="margin-left:15px; width: 20%;border-radius:20px;border: 1px solid #247ba0;" />
         <button class="navbar-toggler" type="button" (click)="toggleNavbar()">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent" [ngClass]="{ 'show': navbarOpen }">
+        <div class="collapse navbar-collapse" style="margin-top: auto;" id="navbarSupportedContent" [ngClass]="{ 'show': navbarOpen }">
             <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item">
-                    <!-- <a class="nav-link" id="addpost" (click)="openVerticallyCentered(content)"  data-target=".bd-example-modal-sm" style="color:white;background-color:#d24200" data-toggle="modal" >ADD Post</a> -->
-                    <!-- <span class="nav-link boxshadowcard" id="addpost" (click)="GoToPage('AddPost')"
-            style="color:white;background-color:#ff6b28">ADD Post</span> -->
+                <li class="nav-item" *ngIf="!IsStudent">
+                    <!-- <a class="nav-link" id="addpost" (click)="openVerticaksllyCentered(content)"  data-target=".bd-example-modal-sm" style="color:white;background-color:#d24200" data-toggle="modal" >ADD Post</a> --> -->
+                     <input type="button" class="btn regisbutn-small" value="Create Webinar" (click)="GoToPage('AddPost')"
+            />
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" *ngIf="IsStudent" [routerLinkActive]="['YesActive']" style="line-height: 35px;" routerLink="/User/Wall">Wall</a>
-                    <a class="nav-link" *ngIf="!IsStudent" [routerLinkActive]="['YesActive']" style="line-height: 35px;" routerLink="/Institution/Wall">Wall</a>
+                    <a class="nav-link" [class.YesActive]="ActiveLink.Wall" style="line-height: 35px;" (click)="routenav('Wall')">Wall</a>
+                    
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLinkActive]="['YesActive']" style="line-height: 35px;" routerLink="/User/Activity">Activity</a>
+                    <a class="nav-link" [class.YesActive]="ActiveLink.Activity" style="line-height: 35px;" (click)="routenav('Activity')">Activity</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" [routerLinkActive]="['YesActive']" style="line-height: 35px;" routerLink="/User/Follow">Follow</a>
+                    <a class="nav-link" [class.YesActive]="ActiveLink.Follow" *ngIf="IsStudent" style="line-height: 35px;" (click)="routenav('Follow')">Follow</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" [routerLinkActive]="['YesActive']" style="line-height: 35px;" routerLink="/User/Notification">Notification</a>
+                    <a class="nav-link" [class.YesActive]="ActiveLink.Notification" (click)="routenav('Notification')" style="line-height: 35px;" routerLink="/User/Notification">Notification</a>
                 </li>
 
                 <!-- <li class="nav-item">
@@ -51,7 +51,7 @@
                                 <li style="color:#6b6b6b" (click)="changeUserType(2)">AS Institution</li>
                             </ul>
                         </li>
-                        <li style="color:#6b6b6b"><a style="color:#6b6b6b" href="#">Sign Out</a></li>
+                        <li style="color:#6b6b6b"><a (click)="LogOff()" style="color:#6b6b6b" href="#">Sign Out</a></li>
                     </ul>
                 </li>
 
