--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
+
 @import "~bootstrap/dist/css/bootstrap.css";
+
+@font-face {
+    font-family: ubuntu-regular;
+    src: url(assets/Fonts/Ubuntu/Ubuntu-Regular.ttf) format("opentype");
+  };
+
 .F6 {
     font-size: 6px;
 }
@@ -85,6 +92,24 @@
     color: #3d3d3d;
 }
 
+.PrimaryColor{
+    color:#247ba0;
+}
+
+.PrimaryColor2{
+    color:#227396;
+}
+
+.PrimaryColor3{
+    color:#2A8CB7;
+}
+.PrimaryRed{
+color:#d24956;
+}
+.PrimaryGreen{
+    color:#28a745;
+}
+
 .HeaderDiv {
     border-bottom: 1px solid #dedede;
     text-align: left;
@@ -96,7 +121,7 @@
 }
 
 .BorderBottomLight {
-    border-bottom: 1px solid #d4d4d4;
+    border-bottom: 1px solid #fafafa;
 }
 
 .ListTypeNone {
@@ -233,6 +258,17 @@ html {
     box-shadow: 0px 2px 5px #b6b6b6;
 }
 
+.regisbutn-cancel-x-small {
+    border: none;
+    font-size: 12px;
+    background-color: #6c757d;
+    color: whitesmoke;
+    padding: 2px 10px;
+    font-weight: 500;
+    border-radius: 5px;
+    box-shadow: 0px 2px 5px #b6b6b6;
+}
+
 .regisbutn-cancel {
     border: none;
     background-color: #6c757d;
@@ -251,3 +287,32 @@ html {
     padding: 5px 5px;
     font-weight: 500;
 }
+
+.onlineTopicHeading:hover {
+    color: #2A8CB7 !important;
+   
+}
+
+
+
+.ani-from-bottom {
+    animation: 1s ease-out 0s 1 slideInFromBottom;
+}
+@keyframes slideInFromBottom {
+    0% {
+      transform: translateY(10%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
+
+  .ani-fadein{
+      animation: 2s ease 0s 1 fadein;
+  }
+
+  @keyframes fadein
+  {
+    0% {opacity: 0;}
+    100% {opacity: 1;}  
+  }
